--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tracing = "0.1.27"
 tracing-subscriber = "0.3.17"
 serde = {version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.64"
+console = "0.15.0"
